--- a/shared/css/global.css
+++ b/shared/css/global.css
@@ -144,7 +144,8 @@ h3 .icon-img { width: 24px; height: 24px; background-color: var(--accent-color);
     top: 0;
     left: 0;
     width: 300px;
-    height: 100vh;
+    height: 100%;
+    height: 100dvh;
     background: var(--card-bg);
     border-right: 2px solid var(--accent-color);
     z-index: 19999;
@@ -154,7 +155,7 @@ h3 .icon-img { width: 24px; height: 24px; background-color: var(--accent-color);
     flex-direction: column;
     box-shadow: 0 0 0 rgba(0,0,0,0); /* Sombra desligada ao fechar */
     box-sizing: border-box;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
 .menu-sidebar.open {
